--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ django==3.2.12
 django-cors-headers==3.11.0
 django-dotenv==1.4.2
 djangorestframework==3.13.1
+djangorestframework-simplejwt==3.2.12
